fabric/api.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fabric
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: sidecar
  selector:
    app: api
  type: ClusterIP
