fabric/api.statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: api
    cluster: fabric.api
  name: api
  namespace: fabric
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: api
      cluster: fabric.api
  serviceName: api
  template:
    metadata:
      labels:
        app: api
        cluster: fabric.api
    spec:
      serviceAccount: api
      containers:
        - name: sidecar
          image: "docker-dev.production.deciphernow.com/deciphernow/gm-proxy:1.4.2"
          imagePullPolicy: IfNotPresent
          args:
            - -c
            - /etc/greymatter/config.yaml
          command:
            - /app/gm-proxy
          ports:
            - name: metrics
              containerPort: 8080
            - name: sidecar
              containerPort: 8443
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 1Gi
          volumeMounts:
            - name: sidecar-config
              mountPath: /etc/greymatter
              readOnly: true
            - name: spire-socket
              mountPath: /run/spire/sockets
              readOnly: false
        - name: api
          image: docker-dev.production.deciphernow.com/deciphernow/gm-control-api:1.4.3
          imagePullPolicy: IfNotPresent
          env:
            - name: GM_CONTROL_API_ADDRESS
              value: "127.0.0.1:10080"
            - name: GM_CONTROL_API_LOG_LEVEL
              value: "info"
            - name: GM_CONTROL_API_ORG_KEY
              value: "greymatter"
            - name: GM_CONTROL_API_PERSISTER_PATH
              value: "/var/lib/greymatter/data/backend.json"
            - name: GM_CONTROL_API_PERSISTER_TYPE
              value: "file"
            - name: GM_CONTROL_API_ZONE_KEY
              value: "default.zone"
            - name: GM_CONTROL_API_ZONE_NAME
              value: "default.zone"
          ports:
            - name: http
              containerPort: 10080
              protocol: TCP
          volumeMounts:
            - name: api-data
              mountPath: /var/lib/greymatter
              readOnly: false
      imagePullSecrets:
        - name: docker-dev.production.deciphernow.com
      securityContext:
        runAsUser: 100
        runAsGroup: 101
        fsGroup: 100
      volumes:
        - name: sidecar-config
          configMap:
            name: api-sidecar
        - name: spire-socket
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
  volumeClaimTemplates:
    - metadata:
        name: api-data
        namespace: fabric
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
