fabric/control.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: control
    cluster: fabric.control
  name: control
  namespace: fabric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control
      cluster: fabric.control
  template:
    metadata:
      labels:
        app: control
        cluster: fabric.control
    spec:
      serviceAccountName: control
      containers:
        - name: sidecar
          image: "docker.production.deciphernow.com/deciphernow/gm-proxy:1.2.2"
          imagePullPolicy: IfNotPresent
          args:
            - -c
            - /etc/greymatter/config.yaml
          command:
            - /app/gm-proxy
          ports:
            - name: metrics
              containerPort: 8080
              protocol: TCP
            - name: sidecar
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: sidecar-config
              mountPath: /etc/greymatter
              readOnly: true
            - name: spire-socket
              mountPath: /run/spire/sockets
              readOnly: false
          env:
          - name: METRICS_KEY_FUNCTION
            value: depth
        - name: control
          image: "docker.production.deciphernow.com/deciphernow/gm-control:1.2.3"
          imagePullPolicy: IfNotPresent
          env:
            - name: GM_CONTROL_API_HOST
              value: "127.0.0.1:9080"
            - name: GM_CONTROL_API_KEY
              value: "UNUSED"
            - name: GM_CONTROL_API_SSL
              value: "false"
            - name: GM_CONTROL_API_ZONE_NAME
              value: "default.zone"
            - name: GM_CONTROL_CMD
              value: "kubernetes"
            - name: GM_CONTROL_CONSOLE_LEVEL
              value: "info"
            - name: GM_CONTROL_KUBERNETES_CLUSTER_LABEL
              value: "cluster"
            - name: GM_CONTROL_KUBERNETES_NAMESPACES
              value: "fabric,ingress,observables,sense,spire,website,data"
            - name: GM_CONTROL_KUBERNETES_PORT_NAME
              value: "sidecar"
            - name: GM_CONTROL_XDS_ADS_ENABLED
              value: "true"
            - name: GM_CONTROL_XDS_ADDR
              value: "127.0.0.1:10080"
            - name: GM_CONTROL_XDS_RESOLVE_DNS
              value: "true"
          ports:
            - name: grpc
              containerPort: 10080
              protocol: TCP
      imagePullSecrets:
        - name: docker.production.deciphernow.com
        - name: index.docker.io
      volumes:
        - name: sidecar-config
          configMap:
            name: control-sidecar
        - name: spire-socket
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
